REGRESSION(r213464): [iOS] Fonts get too bold when the "Bold Text" accessibility setting is enabled https://bugs.webkit.org/show_bug.cgi?id=172737 Source/WebCore:

Reviewed by Simon Fraser.

Revert the part of r213464 which changed how we calculate the weights of system fonts.

Add an InternalSetting to trigger our mock of the accessbility "Bold Text" setting. We can't
use the real setting, so instead we just ask for bold fonts instead of regular fonts when this
setting is true.

Tests: fast/text/accessibility-bold-system-font.html
       fast/text/accessibility-bold-system-font-2.html

* platform/graphics/FontCache.h:
(WebCore::FontCache::shouldMockBoldSystemFontForAccessibility):
(WebCore::FontCache::setShouldMockBoldSystemFontForAccessibility):
* platform/graphics/ios/FontCacheIOS.mm:
(WebCore::platformFontWithFamilySpecialCase):
* rendering/RenderTheme.h:
(WebCore::RenderTheme::shouldMockBoldSystemFontForAccessibility):
(WebCore::RenderTheme::setShouldMockBoldSystemFontForAccessibility):
* rendering/RenderThemeIOS.h:
* rendering/RenderThemeIOS.mm:
(WebCore::cssWeightOfSystemFont):
(WebCore::RenderThemeIOS::updateCachedSystemFontDescription):
* testing/InternalSettings.cpp:
(WebCore::InternalSettings::Backup::Backup):
(WebCore::InternalSettings::Backup::restoreTo):
(WebCore::InternalSettings::setShouldMockBoldSystemFontForAccessibility):
* testing/InternalSettings.h:
* testing/InternalSettings.idl:

LayoutTests:

<rdar://problem/31608236>

Reviewed by Simon Fraser.

* fast/text/accessibility-bold-system-font-2-expected.html: Added.
* fast/text/accessibility-bold-system-font-2.html: Added.
* fast/text/accessibility-bold-system-font-expected.txt: Added.
* fast/text/accessibility-bold-system-font.html: Added.
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/189770@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217742 268f45cc-cd09-0410-ab3c-d52691b4dbfc